objecttracking/objecttracking/src/de/uniol/inf/is/odysseus/objecttracking/predicate/range/parser/nodes/MapleResultParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MapleResultParser.java */
        package de.uniol.inf.is.odysseus.objecttracking.predicate.range.parser.nodes;
@SuppressWarnings("all")
        public class MapleResultParser/*@bgen(jjtree)*/implements MapleResultParserTreeConstants, MapleResultParserConstants {/*@bgen(jjtree)*/
  protected static JJTMapleResultParserState jjtree = new JJTMapleResultParserState();

  static final public ASTMaple Maple() throws ParseException {
    trace_call("Maple");
    try {
                  /*@bgen(jjtree) Maple */
  ASTMaple jjtn000 = new ASTMaple(JJTMAPLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(K_MAPLE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 22:
        case 24:
          Solution();
          break;
        case K_PIECEWISE:
          MaplePiecewise();
          break;
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Maple");
    }
  }

  static final public void MaplePiecewise() throws ParseException {
    trace_call("MaplePiecewise");
    try {
 /*@bgen(jjtree) MaplePiecewise */
  ASTMaplePiecewise jjtn000 = new ASTMaplePiecewise(JJTMAPLEPIECEWISE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(K_PIECEWISE);
        jj_consume_token(19);
        ConditionSolution();
        label_1:
        while (true) {
          if (jj_2_1(2147483647)) {
            ;
          } else {
            break label_1;
          }
          jj_consume_token(20);
          ConditionSolution();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 20:
          jj_consume_token(20);
          Solution();
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(21);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("MaplePiecewise");
    }
  }

  static final public void ConditionSolution() throws ParseException {
    trace_call("ConditionSolution");
    try {
 /*@bgen(jjtree) ConditionSolution */
  ASTConditionSolution jjtn000 = new ASTConditionSolution(JJTCONDITIONSOLUTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Condition();
        jj_consume_token(20);
        Solution();
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ConditionSolution");
    }
  }

  static final public void Condition() throws ParseException {
    trace_call("Condition");
    try {
 /*@bgen(jjtree) Condition */
  ASTCondition jjtn000 = new ASTCondition(JJTCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_AND:
          ComplexCondition();
          break;
        case IDENTIFIER:
        case CHAR_LITERAL:
        case FLOAT:
        case INTEGER:
        case 19:
        case 25:
          SimpleCondition();
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Condition");
    }
  }

  static final public void ComplexCondition() throws ParseException {
    trace_call("ComplexCondition");
    try {
 /*@bgen(jjtree) ComplexCondition */
  ASTComplexCondition jjtn000 = new ASTComplexCondition(JJTCOMPLEXCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(K_AND);
        jj_consume_token(19);
        SimpleCondition();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 20:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          jj_consume_token(20);
          SimpleCondition();
        }
        jj_consume_token(21);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ComplexCondition");
    }
  }

  static final public void SimpleCondition() throws ParseException {
    trace_call("SimpleCondition");
    try {
 /*@bgen(jjtree) SimpleCondition */
  ASTSimpleCondition jjtn000 = new ASTSimpleCondition(JJTSIMPLECONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Expression();
        CompareOperator();
        Expression();
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("SimpleCondition");
    }
  }

  static final public void CompareOperator() throws ParseException {
    trace_call("CompareOperator");
    try {
                        /*@bgen(jjtree) CompareOperator */
  ASTCompareOperator jjtn000 = new ASTCompareOperator(JJTCOMPAREOPERATOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(COMPARE_OPERATOR);
                           jjtree.closeNodeScope(jjtn000, true);
                           jjtc000 = false;
    jjtn000.setOperator(t.image);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("CompareOperator");
    }
  }

  static final public void Solution() throws ParseException {
    trace_call("Solution");
    try {
 /*@bgen(jjtree) Solution */
  ASTSolution jjtn000 = new ASTSolution(JJTSOLUTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        if (jj_2_2(2147483647)) {
          FullSolution();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 22:
            SimpleSolution();
            break;
          case 24:
            EmptySolution();
                                                                                                                    jjtree.closeNodeScope(jjtn000, true);
                                                                                                                    jjtc000 = false;
                                                                                                                   jjtn000.setEmpty(true);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Solution");
    }
  }

  static final public void SimpleSolution() throws ParseException {
    trace_call("SimpleSolution");
    try {
                       /*@bgen(jjtree) SimpleSolution */
  ASTSimpleSolution jjtn000 = new ASTSimpleSolution(JJTSIMPLESOLUTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(22);
        SimpleSolutionContent();
        jj_consume_token(23);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("SimpleSolution");
    }
  }

  static final public void SimpleSolutionContent() throws ParseException {
    trace_call("SimpleSolutionContent");
    try {
                              /*@bgen(jjtree) SimpleSolutionContent */
  ASTSimpleSolutionContent jjtn000 = new ASTSimpleSolutionContent(JJTSIMPLESOLUTIONCONTENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Expression();
        CompareOperator();
        Expression();
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("SimpleSolutionContent");
    }
  }

  static final public void FullSolution() throws ParseException {
    trace_call("FullSolution");
    try {
                     /*@bgen(jjtree) FullSolution */
  ASTFullSolution jjtn000 = new ASTFullSolution(JJTFULLSOLUTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(22);
        Identifier();
        jj_consume_token(23);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("FullSolution");
    }
  }

  static final public void EmptySolution() throws ParseException {
    trace_call("EmptySolution");
    try {
                      /*@bgen(jjtree) EmptySolution */
  ASTEmptySolution jjtn000 = new ASTEmptySolution(JJTEMPTYSOLUTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(24);
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("EmptySolution");
    }
  }

  static final public void Expression() throws ParseException {
    trace_call("Expression");
    try {
                   /*@bgen(jjtree) Expression */
  ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String tOp;
      try {
        if (jj_2_3(2147483647)) {
          SimpleToken();
          tOp = MathOperator();
    jjtn000.setOperator(tOp);
          Expression();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case IDENTIFIER:
          case CHAR_LITERAL:
          case FLOAT:
          case INTEGER:
          case 19:
          case 25:
            SimpleToken();
            break;
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Expression");
    }
  }

  static final public void SimpleToken() throws ParseException {
    trace_call("SimpleToken");
    try {
                    /*@bgen(jjtree) SimpleToken */
  ASTSimpleToken jjtn000 = new ASTSimpleToken(JJTSIMPLETOKEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        if (jj_2_4(2147483647)) {
          Number();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CHAR_LITERAL:
            String();
            break;
          default:
            jj_la1[8] = jj_gen;
            if (jj_2_5(2147483647)) {
              FunctionExpression();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IDENTIFIER:
              case 19:
              case 25:
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case 25:
                  jj_consume_token(25);
          jjtn000.setMinus(true);
                  break;
                default:
                  jj_la1[6] = jj_gen;
                  ;
                }
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case 19:
                  jj_consume_token(19);
                  Expression();
                  jj_consume_token(21);
                  break;
                case IDENTIFIER:
                case 25:
                  Identifier();
                  break;
                default:
                  jj_la1[7] = jj_gen;
                  jj_consume_token(-1);
                  throw new ParseException();
                }
                break;
              default:
                jj_la1[9] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("SimpleToken");
    }
  }

  static final public void FunctionExpression() throws ParseException {
    trace_call("FunctionExpression");
    try {
                           /*@bgen(jjtree) FunctionExpression */
  ASTFunctionExpression jjtn000 = new ASTFunctionExpression(JJTFUNCTIONEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
    ASTFunctionName jjtn001 = new ASTFunctionName(JJTFUNCTIONNAME);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
        try {
          Identifier();
        } catch (Throwable jjte001) {
    if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
        } finally {
    if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
        }
        jj_consume_token(19);
        Expression();
        jj_consume_token(21);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("FunctionExpression");
    }
  }

  static final public String MathOperator() throws ParseException {
    trace_call("MathOperator");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        jj_consume_token(26);
    {if (true) return "*";}
        break;
      case 27:
        jj_consume_token(27);
    {if (true) return "+";}
        break;
      case 25:
        jj_consume_token(25);
    {if (true) return "-";}
        break;
      case 28:
        jj_consume_token(28);
    {if (true) return "/";}
        break;
      case 29:
        jj_consume_token(29);
    {if (true) return "^";}
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("MathOperator");
    }
  }

  static final public void Number() throws ParseException {
    trace_call("Number");
    try {
               /*@bgen(jjtree) Number */
  ASTNumber jjtn000 = new ASTNumber(JJTNUMBER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token sign = null;
  Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
          sign = jj_consume_token(25);
          break;
        default:
          jj_la1[11] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FLOAT:
          t = jj_consume_token(FLOAT);
          break;
        case INTEGER:
          t = jj_consume_token(INTEGER);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
    jjtn000.setValue(sign != null && sign.image != null ? sign.image + t.image : "" + t.image);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Number");
    }
  }

  static final public void String() throws ParseException {
    trace_call("String");
    try {
               /*@bgen(jjtree) String */
  ASTString jjtn000 = new ASTString(JJTSTRING);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(CHAR_LITERAL);
                      jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
    jjtn000.setValue(t.image);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("String");
    }
  }

  static final public void Identifier() throws ParseException {
    trace_call("Identifier");
    try {
                   /*@bgen(jjtree) Identifier */
  ASTIdentifier jjtn000 = new ASTIdentifier(JJTIDENTIFIER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token sign = null;
  Token t;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 25:
          sign = jj_consume_token(25);
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        t = jj_consume_token(IDENTIFIER);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
    jjtn000.setName((sign != null && sign.image != null ? sign.image : "") + t.image);
      } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
      }
    } finally {
      trace_return("Identifier");
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_17() {
    if (jj_scan_token(27)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_16() {
    if (jj_scan_token(26)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_11()) return true;
    if (jj_scan_token(19)) return true;
    if (jj_3R_21()) return true;
    if (jj_scan_token(21)) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(25)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3R_29()) {
    jj_scanpos = xsp;
    if (jj_3R_30()) return true;
    }
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_5()) return true;
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_12()) {
    jj_scanpos = xsp;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_32() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) return true;
    }
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_3R_5()) return true;
    if (jj_3R_6()) return true;
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_scan_token(24)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_scan_token(22)) return true;
    if (jj_3R_11()) return true;
    if (jj_scan_token(23)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_35() {
    if (jj_scan_token(22)) return true;
    if (jj_3R_39()) return true;
    if (jj_scan_token(23)) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_3R_21()) return true;
    if (jj_3R_38()) return true;
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_37() {
    if (jj_scan_token(20)) return true;
    if (jj_3R_34()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(20)) return true;
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_3R_36()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(25)) jj_scanpos = xsp;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3R_38() {
    if (jj_scan_token(COMPARE_OPERATOR)) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_3R_34()) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(CHAR_LITERAL)) return true;
    return false;
